# wayonagio-email-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  TODO.md  main.py  pyproject.toml
.cursor/plans/: email_response_agent_c858df9e.plan.md
addon/: Code.gs  appsscript.json
docs/: ARCHITECTURE.md  LOCAL_TESTING.md
scripts/: redact_exemplar_pii.py
scripts/cloud/: common.sh  deploy_from_scratch.sh  oauth_health_check.sh  teardown.sh  update.sh
src/wayonagio_email_agent/: agent.py  api.py  cli.py  debug_log.py  gmail_client.py  state.py
src/wayonagio_email_agent/exemplars/: README.md  __init__.py  config.py  loader.py  prompt.py  sanitize.py  source.py
src/wayonagio_email_agent/kb/: README.md  __init__.py  artifact.py  chunk.py  config.py  doctor.py  drive.py  embed.py  extract.py  ingest.py  retrieve.py  store.py
src/wayonagio_email_agent/llm/: client.py  ollama.py
tests/: test_agent.py  test_api.py  test_cli.py  test_exemplars_config.py  test_exemplars_loader.py  test_exemplars_prompt.py  test_exemplars_sanitize.py  test_exemplars_source.py  test_exemplars_tripwire.py  test_gmail_client.py  test_kb_artifact.py  test_kb_chunk.py  test_kb_config.py  test_kb_doctor.py  test_kb_drive.py  test_kb_embed.py  test_kb_extract.py  test_kb_ingest.py  test_kb_retrieve.py  test_kb_store.py  test_llm.py  test_state.py
